// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-regalia-gold",
    "equitas-selfe",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "amex-gold",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
    "hdfc-marriott-bonvoy",
    "hdfc-tata-neu-infinity",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "bobcard-eterna",
    "yes-first-preferred",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "rbl-icon",
  ],
  "combo-premium-travel": [
    "hsbc-travelone",
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "icici-adani-one-signature",
    "axis-horizon",
    "indigo-sbi-elite",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest",
    "bobcard-eterna",
    "sbi-card-miles-elite",
    "indusind-eazydiner",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-privilege",
    "axis-flipkart",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "au-ixigo",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "hsbc-premier",
    "bobcard-etihad-guest",
    "icici-makemytrip",
    "idfc-ashva",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "idfc-wow",
    "au-ixigo",
    "idfc-mayura",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-solitaire",
    "kotak-white-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-reserve",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-miles-and-more",
    "axis-privilege-easy",
    "axis-privilege",
    "axis-kwik",
    "axis-indigo",
    "axis-rewards",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop-black",
    "hdfc-irctc",
    "hdfc-tata-neu-plus",
    "hdfc-moneyback-plus",
    "hdfc-indianoil",
    "hdfc-shoppers-stop",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-coral-rupay",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-coral",
    "icici-sapphiro-rupay",
    "icici-rubyx",
    "icici-platinum-chip",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "indigo-sbi-elite",
    "aurum-sbi",
    "sbi-card-miles-elite",
    "sbi-card-prime",
    "sbi-card-elite",
    "sbi-card-miles-prime",
    "irctc-rupay-sbi",
    "tata-neu-plus-sbi",
    "irctc-sbi-platinum",
    "reliance-sbi-prime",
  ],
  "lifetime-free": [
    "hsbc-visa-platinum",
    "au-ixigo",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
    "idfc-first-select",
    "idfc-first-millennia",
    "idfc-first-classic",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "sc-beyond",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "sc-beyond",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "equitas-selfe",
    "kotak-solitaire",
    "indusind-eazydiner",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "amex-membership-rewards",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "hsbc-visa-platinum",
    "au-ixigo",
    "indusind-tiger",
    "kotak-infinite",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "sc-priority-visa-infinite",
    "federal-signet",
    "idfc-first-wealth",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "hdfc-moneyback-plus",
    "amex-smartearn",
    "cheq-au",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "axis-select",
    "hsbc-rupay-cashback",
    "axis-my-zone",
    "sc-digismart",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
    "axis-airtel",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "au-ixigo",
    "phonepe-sbi-select-black",
    "indusind-eazydiner-platinum",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "tata-neu-infinity-sbi",
    "kotak-zen-signature",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
    "yes-kiwi",
  ],
  "segment-mid-premium": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "yes-marquee",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "sbi-card-miles-elite",
    "bobcard-eterna",
    "amex-membership-rewards",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "hsbc-travelone",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "sc-ultimate",
    "yes-marquee",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "sbi-card-miles-elite",
    "bobcard-eterna",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "aurum-sbi",
    "krisflyer-sbi-apex",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "icici-times-black",
    "yes-marquee",
    "kotak-white-reserve",
  ],
  "spend-international": [
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "bobcard-eterna",
    "amex-gold",
    "bobcard-premier",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "icici-times-black",
    "sc-ultimate",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "indusind-eazydiner",
    "equitas-selfe",
    "sc-ultimate",
    "amex-platinum-travel",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "equitas-selfe",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
    "sc-ultimate",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "hdfc-phonepe-ultimo",
    "axis-airtel",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "axis-ace",
    "hdfc-millennia",
    "titan-sbi",
    "csb-jupiter-edge-plus",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "yes-first-preferred",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
  ],
  "usecase-entertainment": [
    "indusind-eazydiner",
    "yes-marquee",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "yes-reserv",
    "sbi-card-prime",
    "sbi-card-elite",
    "bobcard-eterna",
    "au-ixigo",
    "yes-pop-club",
    "landmark-rewards-sbi-prime",
    "idfc-mayura",
  ],
  "usecase-fuel": [
    "idfc-first-power-plus",
    "bpcl-sbi-octane",
    "axis-indianoil-easy",
    "axis-indianoil",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "indusind-eazydiner",
    "sbi-card-prime",
    "au-ixigo",
    "bpcl-sbi-octane",
    "hdfc-moneyback-plus",
    "kotak-cashback-plus",
    "equitas-selfe",
    "rbl-platinum-maxima-plus",
    "rbl-shoprite",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-cashback",
    "bobcard-eterna",
    "csb-jupiter-edge-plus",
    "hdfc-pixel-play",
    "simplyclick-sbi",
    "axis-cashback",
    "yes-pop-club",
    "rbl-cookies",
    "phonepe-sbi-purple",
    "kotak-cashback-plus",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "hsbc-visa-platinum",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-rent": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "axis-magnus-burgundy",
      "sc-ultimate",
      "axis-magnus",
      "sc-beyond",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "axis-magnus-burgundy",
      "sc-ultimate",
      "axis-magnus",
      "sc-beyond",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "indusind-eazydiner",
      "rbl-platinum-maxima-plus",
      "hdfc-marriott-bonvoy",
    ],
  },
  "combo-premium-travel": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-travelone",
      "bobcard-etihad-guest-premium",
      "icici-adani-one-signature",
      "axis-horizon",
      "axis-indigo-premium",
      "indigo-sbi-elite",
      "sbi-card-miles-elite",
      "bobcard-etihad-guest",
      "hdfc-regalia-gold",
      "krisflyer-sbi",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-magnus",
      "axis-horizon",
      "axis-indigo-premium",
    ],
  },
  "forex": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "equitas-powermiles",
      "bobcard-etihad-guest-premium",
      "idfc-mayura",
      "au-ixigo",
      "idfc-wow",
      "rbl-world-safari",
    ],
  },
  "forex-zero": {
    "Cashback cards": [],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "idfc-mayura",
      "au-ixigo",
      "idfc-wow",
      "scapia-federal",
      "scapia-bobcard",
      "rbl-world-safari",
      "kotak-solitaire",
      "indusind-pioneer-heritage-metal",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus",
      "axis-reserve",
      "yes-marquee",
      "sc-beyond",
      "idfc-mayura",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-magnus",
      "yes-marquee",
      "kotak-solitaire",
      "kotak-white-reserve",
      "hdfc-diners-club-black-metal",
    ],
  },
  "issuer-amex": {
    "Cashback cards": [],
    "Rewards cards": [
      "amex-platinum-travel",
      "amex-membership-rewards",
      "amex-gold",
      "amex-platinum-reserve",
      "amex-smartearn",
      "amex-platinum",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "axis-flipkart-super-elite",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
      "icici-coral-rupay",
      "icici-sapphiro",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "titan-sbi",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "tata-neu-infinity-sbi",
      "indigo-sbi-elite",
      "aurum-sbi",
      "sbi-card-miles-elite",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
      "indusind-eazydiner-platinum",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "equitas-selfe",
      "kotak-solitaire",
      "indusind-eazydiner",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-my-zone",
      "axis-select",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "sbi-cashback",
      "axis-airtel",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "sc-ultimate",
      "aurum-sbi",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "kotak-white-reserve",
      "equitas-selfe",
      "sbi-card-miles-elite",
      "indigo-sbi-elite",
      "yes-reserv",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-visa-platinum",
      "axis-magnus-burgundy",
      "hdfc-regalia-gold",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hdfc-diners-club-privilege",
      "tata-neu-infinity-sbi",
      "hsbc-visa-platinum",
      "hdfc-tata-neu-infinity",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "yes-marquee",
      "bobcard-etihad-guest-premium",
      "sc-ultimate",
      "indusind-eazydiner",
      "equitas-powermiles",
      "amex-platinum-travel",
      "hdfc-marriott-bonvoy",
    ],
  },
  "segment-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-indigo-premium",
      "yes-marquee",
      "sc-ultimate",
      "indusind-eazydiner",
      "equitas-powermiles",
      "amex-platinum-travel",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
      "kotak-solitaire",
      "axis-magnus",
      "icici-times-black",
      "kotak-white-reserve",
      "aurum-sbi",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "yes-kiwi",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "au-ixigo",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "au-ixigo",
      "csb-jupiter-edge-plus",
      "axis-ace",
      "sbm-paisabazaar-paisa-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "equitas-powermiles",
      "hsbc-premier",
      "axis-magnus-burgundy",
      "bobcard-etihad-guest-premium",
      "hdfc-diners-club-black-metal",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "au-ixigo",
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "au-ixigo",
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "sbi-cashback",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "au-ixigo",
      "hsbc-rupay-cashback",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "au-ixigo",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-cashback": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "sbi-cashback",
      "hdfc-phonepe-ultimo",
      "axis-airtel",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "axis-ace",
    ],
    "Rewards cards": [
      "cheq-au",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "indusind-eazydiner",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "hdfc-marriott-bonvoy",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "sbi-cashback",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "yes-marquee",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
      "cheq-au",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-indigo",
      "sc-platinum-rewards",
      "idfc-first-power-plus",
      "hdfc-indianoil",
      "axis-indianoil-premium",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "indusind-eazydiner",
      "yes-marquee",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "simplyclick-sbi",
      "cub-salaryse-level-up",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "axis-fibe",
      "axis-ace",
      "yes-paisabazaar-paisasave",
      "apollo-sbi-select",
      "cheq-au",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "axis-magnus-burgundy",
      "icici-emeralde-private-metal",
      "axis-magnus",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "kotak-white-reserve",
      "equitas-selfe",
      "sbi-card-miles-elite",
      "indigo-sbi-elite",
      "yes-reserv",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "simplyclick-sbi",
      "cub-salaryse-level-up",
    ],
  },
  "premium-degrade-single": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-indigo-premium",
      "yes-marquee",
      "sc-ultimate",
      "indusind-eazydiner",
      "equitas-powermiles",
      "amex-platinum-travel",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "au-ixigo",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
}
`;
